Fixes logo alignment.

--- a/style.css
+++ b/style.css
@@ -907,7 +907,7 @@ article.type-portfolio .pictogram {
 	display: inline-block;
 	zoom: 1;
 	display: inline;
-	padding: 0 30px;
+	margin-left: 30px;
 }
 
 .container.row img {
@@ -1370,7 +1370,6 @@ ul.primary-menu li.selected a { font-style: normal !important; text-align: cente
 .title.folio { margin-top: 135px; margin-bottom: 30px ; }
 
 article {font-size: 14px;}
-
-
+ 
 #social { 	margin-top: 60px; min-height: 300px; } 
 
